--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
 
 /* ====================Main Page Photo==================== */
 
-
-
 /* ==================Drop Down Menu================= */
 
 .dropDown {
@@ -53,18 +51,12 @@ ipad min 768 max 1024 */
   h1{ color: green;}
 } */
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 500px) {
   h1{
     color: orange;
   }
-  img{
-    background-image: url(images/ipad_photo.jpeg);
+  img.small{
+    width: 100%;
   }
 }
 
-@media (min-width: 350) {
-  .img{
-    background-image: url(images/ipad_photo.jpeg);
-
-      }
-}
