--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ h2 {
 /* iphone min 320 max 340
 ipad min 768 max 1024 */
 
-/* @media (min-width: 350){
+@media (max-width: 500px){
   h1{ color: green;}
-} */
+}
 
 @media screen and (max-width: 500px) {
   img.photo{
