--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-
 /* ======================overall page================ */
 
 * {
   font-family: Arial, Helvetica, sans-serif;
   color: blue;
-  background-color: #d0cccc ;
+  background-color: #d0cccc;
   text-align: center;
 }
 
@@ -26,13 +25,11 @@ img.photo {
   background-color: rgb(217, 240, 215);
 }
 
-
 /* ================Secondary Search================ */
 
 h3 {
   text-align: wrap;
 }
-
 
 /* =============Results Section============== */
 
@@ -41,32 +38,32 @@ h2 {
 }
 
 .meal-list {
-  display : flex;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   text-align: wrap;
 }
-
 
 /* ====================Media Styles================== */
 
 /* iphone min 320 max 340
 ipad min 768 max 1024 */
 
-@media (max-width: 500px){
-  h1{ color: green;}
+@media (max-width: 500px) {
+  h1 {
+    color: green;
+  }
 }
 
 @media screen and (max-width: 500px) {
-  img.photo{
+  img.photo {
     width: 100%;
   }
   img.mealPhoto {
     width: 100%;
   }
-  p.Instructions {
+  p.instructions {
     text-align: wrap;
-    color: red
+    color: red;
   }
 }
-
